--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,4 +3,18 @@ environment:
   sdk: ">=3.6.0 <4.0.0"
 workspace:
   - packages/a
+  - packages/a/example
 
+dev_dependencies:
+  melos:
+    path: /home/spydon/repos/melos/packages/melos
+
+melos:
+  scripts:
+    test:
+      run: flutter test
+      exec:
+        concurrency: 1
+      packageFilters:
+        dirExists:
+          - test
